--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -28,6 +28,81 @@
     class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed toolbar-tablet-and-mobile-fixed aside-enabled aside-fixed"
     style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
 
+    <div class="mb-0" id="home">
+        <div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg"
+            style="background-image: url(assets/media/svg/illustrations/landing.svg)">
+            <div class="landing-header" data-kt-sticky="false" data-kt-sticky-name="landing-header"
+                data-kt-sticky-offset="{default: '200px', lg: '300px'}" style="height: 70px !important;">
+                <div class="container">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center flex-equal">
+                            <button class="btn btn-icon btn-active-color-primary me-3 d-flex d-lg-none"
+                                id="landing_menu_toggle">
+                                <span class="svg-icon svg-icon-2hx">
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                            <rect x="0" y="0" width="24" height="24" />
+                                            <rect fill="#000000" x="4" y="5" width="16" height="3" rx="1.5" />
+                                            <path
+                                                d="M5.5,15 L18.5,15 C19.3284271,15 20,15.6715729 20,16.5 C20,17.3284271 19.3284271,18 18.5,18 L5.5,18 C4.67157288,18 4,17.3284271 4,16.5 C4,15.6715729 4.67157288,15 5.5,15 Z M5.5,10 L18.5,10 C19.3284271,10 20,10.6715729 20,11.5 C20,12.3284271 19.3284271,13 18.5,13 L5.5,13 C4.67157288,13 4,12.3284271 4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z"
+                                                fill="#000000" opacity="0.3" />
+                                        </g>
+                                    </svg>
+                                </span>
+                            </button>
+                            <a href=" ">
+                                <img alt="Logo" src="assets/media/logos/mkg.png"
+                                    class="logo-default h-25px h-lg-30px" />
+                                <img alt="Logo" src="assets/media/logos/mkg.png" class="logo-sticky h-20px h-lg-25px" />
+                            </a>
+                        </div>
+                        <div class="d-lg-block" id="header_nav_wrapper">
+                            <div class="d-lg-block p-5 p-lg-0" data-kt-drawer="true" data-kt-drawer-name="landing-menu"
+                                data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true"
+                                data-kt-drawer-width="200px" data-kt-drawer-direction="start"
+                                data-kt-drawer-toggle="#landing_menu_toggle" data-kt-place="true"
+                                data-kt-place-mode="prepend"
+                                data-kt-place-parent="{default: '#mkgTech', lg: '#header_nav_wrapper'}">
+                                <div class="menu menu-column flex-nowrap menu-rounded menu-lg-row menu-title-gray-500 menu-state-title-primary nav nav-flush fs-5 fw-bold"
+                                    id="landing_menu">
+                                    <div class="menu-item">
+                                        <a href="index.html" class="menu-link nav-link active py-3 px-4 px-xxl-6"
+                                            href="#mkgTech" data-kt-scroll-toggle="true"
+                                            data-kt-drawer-dismiss="true">Home</a>
+                                    </div>
+                                    <div class="menu-item">
+                                        <a href="index.html#our-services" class="menu-link nav-link py-3 px-4 px-xxl-6"
+                                            href="#our-services" data-kt-scroll-toggle="true"
+                                            data-kt-drawer-dismiss="true">Our
+                                            Services</a>
+                                    </div>
+
+                                    <div class="menu-item">
+                                        <a href="index.html#why-choose-us" class="menu-link nav-link py-3 px-4 px-xxl-6"
+                                            href="#why-choose-us" data-kt-scroll-toggle="true"
+                                            data-kt-drawer-dismiss="true">Why Choose
+                                            Us</a>
+                                    </div>
+                                    <div class="menu-item">
+                                        <a href="index.html#team" class="menu-link nav-link py-3 px-4 px-xxl-6"
+                                            href="#team" data-kt-scroll-toggle="true"
+                                            data-kt-drawer-dismiss="true">Team</a>
+                                    </div>
+                                    <div class="menu-item">
+                                        <a href="index.html#portfolio" class="menu-link nav-link py-3 px-4 px-xxl-6"
+                                            href="#portfolio" data-kt-scroll-toggle="true"
+                                            data-kt-drawer-dismiss="true">Portfolio</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="card">
             <div class="card-body p-lg-17">
@@ -154,6 +229,87 @@
             </div>
         </div>
     </div>
+
+
+
+    <!-- Footer -->
+    <div class="mb-0">
+        <div class="landing-curve landing-dark-color">
+            <svg viewBox="15 -1 1470 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M1 48C4.93573 47.6644 8.85984 47.3311 12.7725 47H1489.16C1493.1 47.3311 1497.04 47.6644 1501 48V47H1489.16C914.668 -1.34764 587.282 -1.61174 12.7725 47H1V48Z"
+                    fill="currentColor"></path>
+            </svg>
+        </div>
+
+        <div class="landing-dark-bg pt-20">
+            <div class="container">
+                <div class="row py-10 py-lg-20">
+                    <div class="col-lg-6 pe-lg-16 mb-10 mb-lg-0">
+                        <div class="rounded landing-dark-border p-9 mb-10">
+                            <h2 class="text-white">Want to build dream website or App</h2>
+                            <span class="fw-normal fs-4 text-gray-700">Email us to
+                                <a href="mailto:mkgtechsols@gmail.com"
+                                    class="text-white opacity-50 text-hover-primary">mkgtechsols@gmail.com</a></span>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 ps-lg-16">
+                        <div class="d-flex justify-content-center">
+                            <div class="d-flex fw-bold flex-column me-20">
+                                <h4 class="fw-bolder text-gray-400 mb-6">Stay Connected</h4>
+
+                                <a href="https://www.facebook.com/mkgtechsols/" target="_blank" class="mb-6">
+                                    <img src="assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-2" alt="" />
+                                    <span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Facebook</span>
+                                </a>
+
+                                <a href="https://github.com/Rumanali786" target="_blank" class="mb-6">
+                                    <img src="assets/media/svg/brand-logos/github.svg" class="h-20px me-2" alt="" />
+                                    <span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Github</span>
+                                </a>
+
+                                <a href="https://twitter.com/MkgTechsols" target="_blank" class="mb-6">
+                                    <img src="assets/media/svg/brand-logos/twitter.svg" class="h-20px me-2" alt="" />
+                                    <span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Twitter</span>
+                                </a>
+                            </div>
+
+
+                            <div class="d-flex fw-bold flex-column ms-lg-20" style="margin-top: 40px;">
+                                <a href="https://www.linkedin.com/company/mkg-techsols" target="_blank" class="mb-6">
+                                    <img src="assets/media/svg/brand-logos/linkdin.png" class="h-20px me-2" alt="" />
+                                    <span class="text-white opacity-50 text-hover-primary fs-5 mb-6">LinkDin</span>
+                                </a>
+
+                                <a href="https://www.instagram.com/mkgtechsols/" target="_blank" class="mb-6">
+                                    <img src="assets/media/svg/brand-logos/instagram-2-1.svg" class="h-20px me-2"
+                                        alt="" />
+                                    <span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Instagram</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="landing-dark-separator"></div>
+            <div class="container">
+                <div class="d-flex flex-column flex-md-row flex-stack py-7 py-lg-10">
+                    <div class="d-flex align-items-center order-2 order-md-1">
+                        <a href=" ">
+                            <img alt="Logo" src="assets/media/logos/mkg.png" class="h-15px h-md-20px" />
+                        </a>
+
+                        <span class="mx-5 fs-6 fw-bold text-gray-600 pt-1" href="https://www.mkgtechsols.com/">2022
+                            MKG Tech.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
