--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
 						</h1>
 						<!--end::Title-->
 						<!--begin::Action-->
-						<a href="index.html" class="btn btn-primary">Contact Us</a>
+						<a href="contactUs.html" class="btn btn-primary">Contact Us</a>
 						<!--end::Action-->
 					</div>
 					<!--end::Heading-->
