--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -6,14 +6,8 @@
 <head>
     <base href="">
     <meta charset="utf-8" />
-    <title>Metronic Bootstrap 5 Theme | Keenthemes</title>
-    <meta name="description"
-        content="Metronic admin dashboard live demo. Check out all the features of the admin panel. A large number of settings, additional services and widgets." />
-    <meta name="keywords"
-        content="Metronic, bootstrap, bootstrap 5, Angular 11, VueJs, React, Laravel, admin themes, web design, figma, web development, ree admin themes, bootstrap admin, bootstrap dashboard" />
-    <link rel="canonical" href="Https://preview.keenthemes.com/metronic8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+    <title>Mkg Technology | Contact Us</title>
+    <link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
     <link href="assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
 
@@ -24,7 +18,7 @@
 
 
 
-<body id="kt_body"
+<body id="mkgTech"
     class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed toolbar-tablet-and-mobile-fixed aside-enabled aside-fixed"
     style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
 
@@ -51,7 +45,7 @@
                                     </svg>
                                 </span>
                             </button>
-                            <a href=" ">
+                            <a href="index.html">
                                 <img alt="Logo" src="assets/media/logos/mkg.png"
                                     class="logo-default h-25px h-lg-30px" />
                                 <img alt="Logo" src="assets/media/logos/mkg.png" class="logo-sticky h-20px h-lg-25px" />
@@ -67,33 +61,35 @@
                                 <div class="menu menu-column flex-nowrap menu-rounded menu-lg-row menu-title-gray-500 menu-state-title-primary nav nav-flush fs-5 fw-bold"
                                     id="landing_menu">
                                     <div class="menu-item">
-                                        <a href="index.html" class="menu-link nav-link active py-3 px-4 px-xxl-6"
-                                            href="#mkgTech" data-kt-scroll-toggle="true"
-                                            data-kt-drawer-dismiss="true">Home</a>
+                                        <a href="index.html"
+                                            class="menu-link nav-link active py-3 px-4 px-xxl-6">Home</a>
                                     </div>
-                                    <div class="menu-item">
-                                        <a href="index.html#our-services" class="menu-link nav-link py-3 px-4 px-xxl-6"
-                                            href="#our-services" data-kt-scroll-toggle="true"
-                                            data-kt-drawer-dismiss="true">Our
+                                    <!-- <div class="menu-item">
+                                        <a href="index.html#our-services"
+                                            class="menu-link nav-link py-3 px-4 px-xxl-6">Our
                                             Services</a>
                                     </div>
 
                                     <div class="menu-item">
-                                        <a href="index.html#why-choose-us" class="menu-link nav-link py-3 px-4 px-xxl-6"
-                                            href="#why-choose-us" data-kt-scroll-toggle="true"
-                                            data-kt-drawer-dismiss="true">Why Choose
+                                        <a href="index.html#why-choose-us"
+                                            class="menu-link nav-link py-3 px-4 px-xxl-6">Why Choose
                                             Us</a>
                                     </div>
                                     <div class="menu-item">
-                                        <a href="index.html#team" class="menu-link nav-link py-3 px-4 px-xxl-6"
-                                            href="#team" data-kt-scroll-toggle="true"
-                                            data-kt-drawer-dismiss="true">Team</a>
+                                        <a href="index.html#team" class="menu-link nav-link py-3 px-4 px-xxl-6">Team</a>
                                     </div>
                                     <div class="menu-item">
-                                        <a href="index.html#portfolio" class="menu-link nav-link py-3 px-4 px-xxl-6"
-                                            href="#portfolio" data-kt-scroll-toggle="true"
-                                            data-kt-drawer-dismiss="true">Portfolio</a>
+                                        <a href="index.html#portfolio"
+                                            class="menu-link nav-link py-3 px-4 px-xxl-6">Portfolio</a>
+                                    </div> -->
+                                    <!--begin::Menu item-->
+                                    <div class="menu-item">
+                                        <!--begin::Menu link-->
+                                        <a class="menu-link nav-link py-3 px-4 px-xxl-6" href=" "
+                                            data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Contact Us</a>
+                                        <!--end::Menu link-->
                                     </div>
+                                    <!--end::Menu item-->
                                 </div>
                             </div>
                         </div>
@@ -195,37 +191,7 @@
                     </div>
                 </div>
 
-                <div class="card mb-4 bg-light text-center">
-                    <div class="card-body py-12">
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/facebook-4.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/instagram-2-1.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/github.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/behance.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/pinterest-p.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/twitter.svg" class="h-30px my-2" alt="" />
-                        </a>
-
-                        <a href="#" class="mx-4">
-                            <img src="assets/media/svg/brand-logos/dribbble-icon-1.svg" class="h-30px my-2" alt="" />
-                        </a>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
