--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,14 @@
 												<!--end::Menu link-->
 											</div>
 											<!--end::Menu item-->
+											<!--begin::Menu item-->
+											<div class="menu-item">
+												<!--begin::Menu link-->
+												<a class="menu-link nav-link py-3 px-4 px-xxl-6" href="contactUs.html"
+													data-kt-scroll-toggle="true" data-kt-drawer-dismiss="true">Contact Us</a>
+												<!--end::Menu link-->
+											</div>
+											<!--end::Menu item-->
 										</div>
 										<!--end::Menu-->
 									</div>
@@ -1083,7 +1091,7 @@
 							Start With MKG
 							Tech Today,
 							<span class="fw-normal">Build your dream with us!</span>
-						<a href="index.html" class="btn btn-primary" style="margin-left: 30px;">Contact Us</a>
+						<a href="contactUs.html" class="btn btn-primary" style="margin-left: 30px;">Contact Us</a>
 
 						</div>
 					</div>
