--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,11 @@
 	<base href="">
 	<meta charset="utf-8" />
 	<title>Mkg Technology</title>
-	<!-- <meta name="description"
-		content="Metronic admin dashboard live demo. Check out all the features of the admin panel. A large number of settings, additional services and widgets." />
-	<meta name="keywords"
-		content="Metronic, bootstrap, bootstrap 5, Angular 11, VueJs, React, Laravel, admin themes, web design, figma, web development, ree admin themes, bootstrap admin, bootstrap dashboard" />
-	<link rel="canonical" href="Https://preview.keenthemes.com/metronic8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
 	<!--begin::Fonts-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--end::Fonts-->
-	<!--begin::Global Stylesheets Bundle(used by all pages)-->
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/custom.css" rel="stylesheet" type="text/css" />
