--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -7,6 +7,8 @@
     <base href="">
     <meta charset="utf-8" />
     <title>Mkg Technology | Contact Us</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
     <link href="assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
