--- a/public/index.html
+++ b/public/index.html
@@ -1091,7 +1091,7 @@
 							Start With MKG
 							Tech Today,
 							<span class="fw-normal">Build your dream with us!</span>
-						<a href="contactUs.html" class="btn btn-primary" style="margin-left: 30px;">Contact Us</a>
+						<a href="contactUs.html" class="btn btn-info" style="margin-left: 30px;">Contact Us</a>
 
 						</div>
 					</div>
