2 new members addition

--- a/public/index.html
+++ b/public/index.html
@@ -657,6 +657,42 @@
 							<!--end::Person-->
 						</div>
 						<!--end::Item-->
+						<!--begin::Item-->
+						<div class="text-center">
+							<!--begin::Photo-->
+							<div class="octagon mx-auto mb-5 d-flex w-200px h-200px bgi-no-repeat bgi-size-contain bgi-position-center"
+								style="background-image:url('assets/media/avatars/data\ Scine.jpg')"></div>
+							<!--end::Photo-->
+							<!--begin::Person-->
+							<div class="mb-0">
+								<!--begin::Name-->
+								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Mustansar</a>
+								<!--end::Name-->
+								<!--begin::Position-->
+								<div class="text-muted fs-6 fw-bold mt-1">Data Science</div>
+								<!--begin::Position-->
+							</div>
+							<!--end::Person-->
+						</div>
+						<!--end::Item-->
+						<!--begin::Item-->
+						<div class="text-center">
+							<!--begin::Photo-->
+							<div class="octagon mx-auto mb-5 d-flex w-200px h-200px bgi-no-repeat bgi-size-contain bgi-position-center"
+								style="background-image:url('assets/media/avatars/graphic.jpg')"></div>
+							<!--end::Photo-->
+							<!--begin::Person-->
+							<div class="mb-0">
+								<!--begin::Name-->
+								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Aleem</a>
+								<!--end::Name-->
+								<!--begin::Position-->
+								<div class="text-muted fs-6 fw-bold mt-1">Graphics Designer</div>
+								<!--begin::Position-->
+							</div>
+							<!--end::Person-->
+						</div>
+						<!--end::Item-->
 
 					</div>
 					<!--end::Wrapper-->
