--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <head>
 	<base href="">
 	<meta charset="utf-8" />
-	<title>Mkg Technology</title>
+	<title>Mkg Techsolsnology</title>
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
 	<!--begin::Fonts-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -149,7 +149,7 @@
 							<br />with
 							<span
 								style="background: linear-gradient(to right, #12CE5D 0%, #FFD80C 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">
-								<span id="kt_landing_hero_text"> Mkg Tech</span>
+								<span id="kt_landing_hero_text"> Mkg Techsols</span>
 							</span>
 						</h1>
 						<!--end::Title-->
@@ -666,7 +666,7 @@
 							<!--begin::Person-->
 							<div class="mb-0">
 								<!--begin::Name-->
-								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Mustansar</a>
+								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Muhammad Umer</a>
 								<!--end::Name-->
 								<!--begin::Position-->
 								<div class="text-muted fs-6 fw-bold mt-1">Data Science</div>
@@ -684,7 +684,7 @@
 							<!--begin::Person-->
 							<div class="mb-0">
 								<!--begin::Name-->
-								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Aleem</a>
+								<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Muhammad Shoaib</a>
 								<!--end::Name-->
 								<!--begin::Position-->
 								<div class="text-muted fs-6 fw-bold mt-1">Graphics Designer</div>
@@ -816,23 +816,7 @@
 									</a>
 								</div>
 								<!--end::Col-->
-								<!--begin::Col-->
-								<div class="col">
-									<!--begin::Overlay-->
-									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/stock/600x400/frog2.jpeg">
-										<!--begin::Image-->
-										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/stock/600x600/Run.jpeg')"></div>
-										<!--end::Image-->
-										<!--begin::Action-->
-										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
-											<i class="bi bi-eye-fill fs-2x text-white"></i>
-										</div>
-										<!--end::Action-->
-									</a>
-								</div>
-								<!--end::Col-->
+							
 								<!--begin::Col-->
 								<div class="col">
 									<!--begin::Overlay-->
@@ -850,6 +834,16 @@
 									</a>
 								</div>
 								<!--end::Col-->
+									<!-- <div class="col">
+										<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
+											href="assets/media/stock/600x400/frog2.jpeg">
+											<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
+												style="background-image:url('assets/media/stock/600x600/Run.jpeg')"></div>
+											<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
+												<i class="bi bi-eye-fill fs-2x text-white"></i>
+											</div>
+										</a>
+									</div> -->
 							</div>
 							<!--begin::Row-->
 						</div>
@@ -908,7 +902,7 @@
 								</div>
 								<!--end::Title-->
 								<!--begin::Feedback-->
-								<div class="text-gray-500 fw-bold fs-4">MKG tech proven to be a bridge for having our
+								<div class="text-gray-500 fw-bold fs-4">Mkg Techsols proven to be a bridge for having our
 									problem solved by attaining a high standard of quality and fulfilling the
 									timetables, despite being chosen for the lowest price on a thorough specification of
 									an integrated mobile application.</div>
@@ -967,7 +961,7 @@
 								<!--end::Title-->
 								<!--begin::Feedback-->
 								<div class="text-gray-500 fw-bold fs-4">We are quite pleased with the service and
-									product that MKG Tech offered in the development of our website. They took the time
+									product that Mkg Techsols offered in the development of our website. They took the time
 									to learn about our company and attended to our every requirement.</div>
 								<!--end::Feedback-->
 							</div>
@@ -1119,7 +1113,7 @@
 					<div class="my-2 me-5" >
 						<div class="fs-1 fs-lg-2qx fw-bolder text-white mb-2  " style=" text-align: center;">
 							Start With MKG
-							Tech Today,
+							Techsols Today,
 							<span class="fw-normal">Build your dream with us!</span>
 						<a href="contactUs.html" class="btn btn-info" style="margin-left: 30px;">Contact Us</a>
 
@@ -1130,7 +1124,7 @@
 					<!-- <div class="my-2 me-5" > -->
 						<div class="fs-1 fs-lg-2qx text-white mb-2  " style="text-align: center;">
 							Start With MKG
-							Tech Today, Build your dream with us!
+							Techsols Today, Build your dream with us!
 						</div>
 					<!-- </div> -->
 				</div>
@@ -1245,7 +1239,7 @@
 								<!--end::Logo image-->
 								<!--begin::Logo image-->
 								<span class="mx-5 fs-6 fw-bold text-gray-600 pt-1" href="https://www.mkgtechsols.com/">2022
-									MKG Tech.</span>
+									Mkg Techsols.</span>
 								<!--end::Logo image-->
 							</div>
 							<!--end::Copyright-->
